# mouse_move

./: .gitignore  .pre-commit-config.yaml  AIVirtualMouseProject.py  README.md  config.yaml  implementation.md  pyproject.toml
src/ai_virtual_mouse/: __init__.py  calibrate.py  camera.py  config.py  gesture_classifier.py  gestures.py  hand_tracker.py  mouse_controller.py  overlay.py  smoothing.py  threading.py
